# words

./: .gitignore  Makefile.am  TODO  autogen.sh  configure.ac
doc/: arch.txt
src/: .gitignore  Makefile.am  app-menu.ui  main.vala  org.gnome.words.gschema.xml.in  words-app.vala  words-definition-box.vala  words-source-loader.vala  words-source.vala  words-sources-dialog.vala  words-stardict-loader.vala  words-stardict-source.vala  words-storage-manager.vala  words-utils.vala  words.gresource.xml
vapi/: Makefile.am  custom.vapi
